# platformer

./: README.md  Setup.hs  cabal.project  cabal.project.freeze  game.cabal  hie.yaml  package.yaml  splices  stack.yaml  test-map.json
apecs/apecs-physics/Chipmunk2D/src/: cpHastySpace.c
apecs/apecs-physics/src/Apecs/: Physics.hs
apecs/apecs-physics/src/Apecs/Physics/: Body.hs  Collision.hs  Constraint.hs  Shape.hs  Space.hs  Types.hs
apecs/apecs/src/: Apecs.hs
apecs/apecs/src/Apecs/: Core.hs  System.hs
assets/map/: ogmo.json  ogmo.ogmo  ogmo2.json
levels/: ogmo.json  ogmo.ogmo  ogmo2.json
ogmo/: ogmo.json  ogmo2.json  ogmo3.json  project.ogmo  script.js
scripts/entities/: Platform07493618.hs  Player04718852.hs  Scripts.hs
src/: AppM.hs  Input.hs  Main.hs  ScriptPrelude.hs  Test.hs
src/Control/: AppM.hs  FrameRate.hs  Signal.hs
src/Data/: Geometry.hs  Ogmo.hs
src/Game/: Entities.hs  LoadOgmo.hs  MainSignal.hs  Scene.hs  Step.hs  World.hs
src/Game/Scenes/: Editor.hs  Level.hs  MainMenu.hs
src/Graphics/: Draw.hs  DrawM.hs  Dxt.hs  MainSignal.hs  Next.hs  Step.hs  V2.hs
