name:           game
version:        0.1.0.0
category:       Web
homepage:       https://github.com/githubuser/game#readme
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
extra-source-files:
    README.md

build-type: Custom
cabal-version: >=2.0

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.2.0.0 && < 4,
    cabal-auto-expose

executable game
  main-is: Main.hs
  other-modules:
      AppM
      Control.Signal
      Game.Entities
      Game.MainSignal
      Game.Scene
      Game.Scenes.Level
      Game.Scenes.MainMenu
      Game.World
      Graphics.MainSignal
      Graphics.Dxt
      Graphics.Draw
      Data.Ogmo
      Game.LoadOgmo
      Input
      Test
      Data.Geometry
      Paths_game
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings TypeFamilies DataKinds NamedFieldPuns LambdaCase TupleSections GeneralizedNewtypeDeriving DeriveGeneric RankNTypes FlexibleInstances FlexibleContexts MultiParamTypeClasses GADTs ScopedTypeVariables TypeApplications RecursiveDo DeriveFunctor
  build-depends:
      StateVar
    , apecs
    , apecs-physics
    , base
    , binary
    , colour
    , containers
    , hashable
    , hashtables
    , linear
    , mtl
    , pqueue
    , sdl2
    , sdl2-gfx
    , sdl2-image
    , text
    , transformers
    , unordered-containers
    , vector
    , rapid
    , xeno
    , bytestring
    , aeson
    , unagi-chan
    , directory
    , filepath
  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2
    -static
    -threaded