name:           game
version:        0.1.0.0
category:       Web
homepage:       https://github.com/githubuser/game#readme
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
extra-source-files:
    README.md

build-type: Custom
cabal-version: >=2.0

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.2.0.0 && < 4,
    cabal-auto-expose -any

executable game
  default-language: Haskell2010
  hs-source-dirs:
      src
      scripts/entities
  default-extensions: OverloadedStrings TypeFamilies DataKinds NamedFieldPuns LambdaCase TupleSections GeneralizedNewtypeDeriving DeriveGeneric RankNTypes FlexibleInstances FlexibleContexts MultiParamTypeClasses GADTs ScopedTypeVariables TypeApplications RecursiveDo DeriveFunctor ViewPatterns
  main-is: Main.hs
  build-depends:
      StateVar
    , apecs
    , apecs-physics
    , base
    , binary
    , colour
    , containers
    , hashable
    , hashtables
    , linear
    , mtl
    , pqueue
    , sdl2
    , sdl2-gfx
    , sdl2-image
    , text
    , transformers
    , unordered-containers
    , vector
    , rapid
    , xeno
    , bytestring
    , aeson
    , unagi-chan
    , directory
    , filepath
    , file-embed
  ghc-options:
    -Wall
    -O2
    -static
    -threaded
  other-modules:
    Control.AppM
    Control.FrameRate
    Data.Geometry
    Data.Ogmo
    Game.LoadOgmo
    Game.Step
    Game.World
    Graphics.Draw
    Graphics.Dxt
    Graphics.Step
    Input
    Platform07493618
    Player04718852
    ScriptPrelude
    Scripts